fixed spacing and content

--- a/src/pages/Hero/style.css
+++ b/src/pages/Hero/style.css
@@ -61,28 +61,27 @@
 .logo{
   /* margin-left: 9%; */
   height: 19rem;
-  min-width: 19rem;
+  /*min-width: 19rem;*/
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Mona Sans";
-  background: #24292E;
-  border: 6px solid #000000;
+  font-family: "Mona Sans", system-ui;
+  border: 4px solid #1BE985;
   border-radius: 30px;
-  margin-top: 2%;
 }
 .logo-container{
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: stretch;
   /* background: #24292E; */
   border-radius: 30px;
-  font-family: "Mona Sans";
+  font-family: "Mona Sans", system-ui;
   scroll-timeline: squareTimeline;
 }
 
 .slogan-description{
-  width: 50%;
+  width: 40%;
   margin: 0;
   padding: 1rem;
   border-radius: 20px;
@@ -95,6 +94,7 @@
   color: #FFFFFF;
   background-color: #24292E;
   border: 4px solid #1BE985;
+  text-align: center;
 }
 
 /* Why Calm Section */
@@ -210,17 +210,20 @@ body{background-color: #1B1F24;}
   top: 70px;
 }
 .what-we-offer-description{
-  width: 75%;
-  margin-bottom: 32px;
-  /* padding: 12px 8px;
 
-  background-color: #383f47;
-  border-radius: 20px; */
   color: white;
-  font-size: 35px;
-  line-height: 40px;
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
+  font-size: 2rem;
+  width: 75%;
+  text-align: center;
+  grid-column: 1 / span 3;
+  grid-row: 1 / span 1;
+}
+.what-we-offer-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  width: 70%;
+
 }
 
 .todolist{
@@ -240,7 +243,7 @@ body{background-color: #1B1F24;}
 .learn-section{
   width: 100%;
   height: 400px;
-  margin: 128px 0;
+  margin: 2rem 0 4rem 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -290,7 +293,6 @@ body{background-color: #1B1F24;}
 
   width: 18.75rem;
   height: 5rem;
-  margin-top: 3rem;
   align-self: center;
   background-color: #1BE985;
   border-radius: 30px;
@@ -321,14 +323,14 @@ body{background-color: #1B1F24;}
 /* Emulation-Simulation Section */
 
 .emulation-simulation-section{
+  /*TODO:fix space between the two cards*/
   width: 100%;
-  margin: 8rem 0;
+  margin: 8rem 0 2rem 0;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: 1fr min-content;
-  column-gap: 1.25rem;
-  row-gap: 10em;
-  font-family: "Mona Sans";
+  row-gap: 4rem;
+  font-family: "Mona Sans", system-ui;
 }
 
 .emulation-container{
@@ -372,6 +374,7 @@ body{background-color: #1B1F24;}
 }
 .emul{
   color: white;
+  font-size: 2rem;
 }
 .emul-1{
   font-family: "JetBrains Mono", system-ui;
@@ -442,7 +445,7 @@ body{background-color: #1B1F24;}
 /* Keep in touch section */
 .keep-in-touch-section{
   padding: 0 5%;
-  margin: 8rem 0;
+  margin: 2rem 0 8rem 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -460,13 +463,13 @@ body{background-color: #1B1F24;}
 }
 
 .keep-in-touch{
-  margin-bottom: 2em;
+
+  margin-bottom: 5rem;
   font-family: 'Mona Sans';
   font-weight: 750;
   font-size: 62px;
   color: #ffffff;
-  -webkit-text-stroke: 3px black;
-    
+
   text-decoration: double;
   scroll-behavior: auto;
 }
@@ -705,5 +708,5 @@ footer{
   animation: none;
 }
 .logoHero{
-  width: 300px;
+  width: 18.75rem;
 }
